test/statements/ferguson/var-init-integral-bad.chpl
proc test() {
  var x:integral = "foo";
  writeln(x);
}
test();
